--- a/index.css
+++ b/index.css
@@ -1,7 +1,13 @@
+body {
+    display: flex;
+    flex-direction: column;
+}
+
 .container {
     width: 60vw;
     margin: auto;
     border: 1px solid grey;
+    flex: 1 0 auto
 }
 
 header {
@@ -29,20 +35,55 @@ main {
     padding: 10px;
 }
 
-.home-page {
-    display: flex;
-    flex-wrap: wrap;
-}
-
-.profile-image {
-    flex: 1;
-}
-
 .profile-image img {
     width: 100%;
     border-radius: 50%;
 }
 
-.about-me {
-    flex: 2;
+@media( min-width: 768px) {
+    .home-page {
+        display: flex;
+        justify-content: space-between;
+    }
+    
+    .profile-image {
+        flex-basis: 40%;
+    }
+    
+    .about-me {
+        flex-basis: 50%;
+    }
+
+    .contact-me {
+        display: flex;
+    }
+
+}
+
+/* footer */
+
+footer {
+    background-color: pink;
+    flex-shrink: 0;
+}
+
+.contact-me {
+    width: 60vw;
+    margin: 0 auto;
+    list-style: none;
+    justify-content: space-between;
+}
+
+.contact-me-item {
+    flex-basis: 30%;
+    margin: 10px;
+    display: flex;
+}
+
+.contact-me-icon {
+    /* width: 2.2rem; */
+    margin: 0 10px;
+    font-size: 1.8rem;
+    /* border-radius: 50%; */
+    /* background-color: blue; */
 }
