--- a/resume-section.css
+++ b/resume-section.css
@@ -1,16 +1,17 @@
-.resume {
+.resume-body {
     display: flex;
+    justify-content: space-between;
 }
 
 .left {
-    flex: 4;
+    flex-basis: 68%;
 }
 
 .right {
-    flex: 2;
+    flex-basis: 22%;
 }
 
-.cv-section {
+.main-section {
     display: flex;
     justify-content: space-around;
     margin: 30px 0;
@@ -32,7 +33,7 @@
 }
 
 .card {
-    margin: 10px 0;
+    margin: 20px 0;
 }
 
 .card h3 {
@@ -41,4 +42,21 @@
 
 .card h5 {
     margin: 0;
+}
+
+.card article {
+    margin: 10px 0;
+}
+
+.sec-section {
+    margin-bottom: 40px;
+}
+
+.sec-section i {
+    font-size: 2.7rem;
+}
+
+.sec-section ul {
+    list-style: none;
+    padding-left: 15px;
 }
