--- a/resume-section.css
+++ b/resume-section.css
@@ -26,7 +26,7 @@
     height: 120px;
     width: 120px;
     border-radius: 120px;
-    background-color: rgb(97, 208, 212);
+    background-color: var(--secondary-color);
     line-height: 120px;
     text-align: center;
     font-weight: 600;
