--- a/resume-section.css
+++ b/resume-section.css
@@ -45,7 +45,7 @@
 }
 
 .card article {
-    margin: 10px;
+    padding: 10px 0;
 }
 
 .sec-section {
@@ -54,6 +54,7 @@
 
 .sec-section i {
     font-size: 2.7rem;
+    color: var(--primary-color);
 }
 
 .sec-section ul {
