--- a/index.css
+++ b/index.css
@@ -18,7 +18,6 @@ body {
 }
 
 a {
-    color: inherit;
     text-decoration: none;
 }
 
@@ -60,6 +59,10 @@ header {
     margin: 5px 8px;
 }
 
+header a {
+    color: inherit;
+}
+
 .nav {
     display: inline-block;
 }
@@ -97,6 +100,10 @@ footer {
     padding: 3px 0;
     /* border-radius: 50%; */
     /* background-color: blue; */
+}
+
+.follow-me-icons a {
+    color: inherit;
 }
 
 .displayNone {
