--- a/projects-section.css
+++ b/projects-section.css
@@ -10,7 +10,10 @@
 
 .project-image img {
     width: 100%;
-    height: 300px;
+    padding: 5px;
+    height: 305px;
+    border: 1px solid var(--primary-color);
+    border-radius: 10px;
 }
 
 .project-info {
