--- a/projects-section.css
+++ b/projects-section.css
@@ -11,6 +11,10 @@
 .project-image img {
     width: 100%;
     padding: 5px;
+    height: 300px;
+}
+
+.projects .project-image img{
     height: 305px;
     border: 1px solid var(--primary-color);
     border-radius: 10px;
