--- a/resume-section.css
+++ b/resume-section.css
@@ -61,3 +61,24 @@
     list-style: none;
     padding-left: 15px;
 }
+
+@media( max-width: 600px) {
+    .resume-body {
+        display: block;
+    }
+
+    .resume .skills-list {
+        display: flex;
+        flex-wrap: wrap;
+    }
+
+    .resume .skills-list li {
+        padding: 10px;
+    }
+}
+
+@media( max-width: 450px) {
+    section.main-section {
+        display: block;
+    }
+}
